[metadata]
name = xrpd_parser
version = 0.0.1
author = David Schaller
description = Parser for X-ray powder diffraction (XRPD) measurements with TOPAS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/david-schaller/xrpd_parser
project_urls =
    Bug Tracker = https://github.com/david-schaller/xrpd_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    matplotlib

[options.packages.find]
exclude =
    examples*

[options.entry_points]
console_scripts =
    xrpd-parser = xrpd_parser.main:main
